ФЗ-9 code style formatting, changed Text blocks